--- a/exercicio/ex02/index.html
+++ b/exercicio/ex02/index.html
@@ -10,4 +10,4 @@
     <h1>Paragrafos e qebras de linha</h1>
     <hr><p>Voce pode escrever um paragrafos de qualquer eito basta colocar 
         tdo no meio do par de tags</p>
-</body>p
+</body>
