--- a/exe22/fndo01.html
+++ b/exe22/fndo01.html
@@ -8,20 +8,31 @@
     <style>
         div.quadrado {
     display: inline-block;
-            border: 1px solid black;
-            width: 300px;
-            height: 300px;
+            border: 2px solid black;
+            border-radius: 10px;
+            background-color: lightslategray;
+            width: 250px;
+            height: 250px;
+        }
+        div#q1{
+         background-color: skyblue;
+        }
+        div#q2{
+            background-image: linear-gradient(to bottom , yellow , red);
+        }
+        div#q3{
+           background-image: url('imagens/pattern003.png');
         }
     </style>
 </head>
 <body>
-    <div class="quadrado">
+    <div class="quadrado" id="q1" >
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q2" >
 
     </div>
-    <div class="quadrado">
+    <div class="quadrado" id="q3">
 
     </div>
 </body>
