--- a/exe22/fundo006.html
+++ b/exe22/fundo006.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body{
+            height: 100vh;
             background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;
+
+            /* shorthand = bacground > repeat > [size] > atachament
+            */
         }
         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -28,6 +33,76 @@
         <h1>Teste de imagem de fundo</h1>
         <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Aspernatur, facere totam deleniti repellat pariatur
+              corporis deserunt modi autem repellendus assumenda est, 
+            et minus officia? Aliquid sit iusto est qui aspernatur?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Placeat consequuntur, voluptatibus repellendus iure 
+            eum magnam impedit quas ipsam magni odit omnis 
+            reiciendis quaerat,
+             earum exercitationem incidunt cum voluptate laudantium labore!
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Saepe vitae placeat, ratione at aliquid sint 
+              exercitationem dicta labore a
+             , sed nesciunt libero? Accusamus quaerat aliquam 
+             animi magni non temporibus ab.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Aspernatur, facere totam deleniti repellat pariatur
+              corporis deserunt modi autem repellendus assumenda est, 
+            et minus officia? Aliquid sit iusto est qui aspernatur?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Placeat consequuntur, voluptatibus repellendus iure 
+            eum magnam impedit quas ipsam magni odit omnis 
+            reiciendis quaerat,
+             earum exercitationem incidunt cum voluptate laudantium labore!
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Saepe vitae placeat, ratione at aliquid sint 
+              exercitationem dicta labore a
+             , sed nesciunt libero? Accusamus quaerat aliquam 
+             animi magni non temporibus ab.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Aspernatur, facere totam deleniti repellat pariatur
+              corporis deserunt modi autem repellendus assumenda est, 
+            et minus officia? Aliquid sit iusto est qui aspernatur?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Placeat consequuntur, voluptatibus repellendus iure 
+            eum magnam impedit quas ipsam magni odit omnis 
+            reiciendis quaerat,
+             earum exercitationem incidunt cum voluptate laudantium labore!
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Saepe vitae placeat, ratione at aliquid sint 
+              exercitationem dicta labore a
+             , sed nesciunt libero? Accusamus quaerat aliquam 
+             animi magni non temporibus ab.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Aspernatur, facere totam deleniti repellat pariatur
+              corporis deserunt modi autem repellendus assumenda est, 
+            et minus officia? Aliquid sit iusto est qui aspernatur?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Placeat consequuntur, voluptatibus repellendus iure 
+            eum magnam impedit quas ipsam magni odit omnis 
+            reiciendis quaerat,
+             earum exercitationem incidunt cum voluptate laudantium labore!
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Saepe vitae placeat, ratione at aliquid sint 
+              exercitationem dicta labore a
+             , sed nesciunt libero? Accusamus quaerat aliquam 
+             animi magni non temporibus ab.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+             Aspernatur, facere totam deleniti repellat pariatur
+              corporis deserunt modi autem repellendus assumenda est, 
+            et minus officia? Aliquid sit iusto est qui aspernatur?
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
+            Placeat consequuntur, voluptatibus repellendus iure 
+            eum magnam impedit quas ipsam magni odit omnis 
+            reiciendis quaerat,
+             earum exercitationem incidunt cum voluptate laudantium labore!
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Saepe vitae placeat, ratione at aliquid sint 
+              exercitationem dicta labore a
+             , sed nesciunt libero? Accusamus quaerat aliquam 
+             animi magni non temporibus ab.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit.
              Aspernatur, facere totam deleniti repellat pariatur
               corporis deserunt modi autem repellendus assumenda est, 
             et minus officia? Aliquid sit iusto est qui aspernatur?
