finalizei stylo css

--- a/exercicio/Landing Page/index.html
+++ b/exercicio/Landing Page/index.html
@@ -10,10 +10,10 @@
 </head>
 <body>
     <header class="cabecalho">
-<img  class="cabecalho-imagem"src="logo.png" alt="">
+<img class="cabecalho-imagem"src="logo.png" alt="">
 
 <nav class="cabecalho-menu">
-   <a class="cabecalho-menu-item">Comunidade Ballerini</a>
+   <a class="cabecalho-menu-item" href="https://dicord.gg/wagxzStdcR">Comunidade Ballerini</a>
    <a class="cabecalho-menu-item">Tutorial</a>
    <a class="cabecalho-menu-item">Open Source</a>
    <a class="cabecalho-menu-item" >Comandos</a>
@@ -23,11 +23,11 @@
     <main class="conteudo">
 <section class="conteudo-principal">
 <div class="conteudo-principal-escrito">
-<h1 class="conteudo-principal-escrito=titulo"> Balle bot</h1>
+<h1 class="conteudo-principal-escrito-titulo"> Balle bot</h1>
 <h2 class="conteudo-principal-subtitulo">Deixe a sua comunidade segura de um jeito fácil</h2>
-<button class="conteudo-principal-escrito=botao">Me adicione</button>
+<button class="conteudo-principal-escrito-botao">Me adicione</button>
 </div>
-<img class="conteudo-principal-imagem src="ballebot.png" alt="">
+<img class="conteudo-principal-imagem "src="ballebot.png" alt="" width: 40px>
 </section>
 <section class="conteudo-secundario">
 <h3 class="conteudo-secundario-titulo">O que ela faz por você?</h3>
