--- a/exercicio/ex23/tabela002.html
+++ b/exercicio/ex23/tabela002.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabelas</title>
+    <style>
+        body{
+            font-family: Arial, Helvetica, sans-serif;
+
+        }
+        table{
+            width: 500px;
+            border-collapse: collapse;
+        }
+        td,th,{
+            border: 1px solid black;
+            padding: 10px;
+        }
+        thead{
+            background-color: gray;
+            color: white;
+        }
+    </style>
 </head>
 <body>
+    <h1>Uso de tabelas Grandes</h1>
     <!--
         Anatonia para tabelas grandes
         Table
@@ -20,18 +39,28 @@
     <table>
         <thead>
         <th>Estado</th>
-        <th>Poplação</th>
+        <th>População</th>
         </thead>
         <tbody>
          <tr>
              <td>São Paulo</td>
-4
+             <td>45 919 039</td>
          </tr>
+         <tr>
+             <td>Minas Gerais</td>
+             <td>21 168 791</td>
+         </tr>
+          <tr>
+              <td>Rio de Janeiro</td>
+              <td>17 263 936</td>
+          </tr>
         </tbody>
-        <tfoot>
 
+        <tfoot>
+        <th>Total de Habitantes</th>
+        <td>0000</td>
         </tfoot>
     </table>
-    <h1>Uso de tabelas Grandes</h1>
+    
 </body>
 </html>
