--- a/exercicio/ex23/tabela002.html
+++ b/exercicio/ex23/tabela002.html
@@ -14,7 +14,7 @@
             width: 500px;
             border-collapse: collapse;
         }
-        td,th,{
+        td,th{
             border: 1px solid black;
             padding: 10px;
         }
@@ -44,16 +44,53 @@
         <tbody>
          <tr>
              <td>São Paulo</td>
-             <td>45 919 039</td>
+             <td class="num">45 919 039</td>
          </tr>
          <tr>
              <td>Minas Gerais</td>
-             <td>21 168 791</td>
+             <td class="num">21 168 791</td>
          </tr>
           <tr>
               <td>Rio de Janeiro</td>
-              <td>17 263 936</td>
+              <td class="num">17 263 936</td>
           </tr>
+
+          <tr>
+            <td>Bahia</td>
+            <td class="num">14873065</td>
+          </tr>
+         <tr>
+          <td>Paraná</td>
+          <td class="num">11433937</td>
+        </tr>
+
+        <tr>
+            <td>Rio Grande Do Sul</td>
+            <td class="num">11372230</td>
+        </tr>
+
+        <tr>
+            <td>Pernabuco</td>
+            <td class="num">9557071</td>
+        </tr>
+
+        <tr>
+            <td>Ceara</td>
+            <td class="num">9132026</td>
+        </tr>
+
+        <tr>
+            <td>Para</td>
+            <td class="num">8602835</td>
+        </tr>
+        <tr>
+            <td>Santa Catarina</td>
+            <td class="num">T 165730</td>
+        </tr>
+        <tr>
+            <td>Maranhão</td>
+            <td></td>
+        </tr>
         </tbody>
 
         <tfoot>
